# Japanese_Inflections

./: Cargo.toml  README.md
src/: alphabet.rs  error.rs  inflection.rs  lib.rs  syllable.rs  umlaut.rs  verb.rs  word.rs
src/special_verbs/: kuru.rs  mod.rs
tests/: ba.rs  causative.rs  desiderative.rs  desiderative_negative.rs  dictionary.rs  imperative.rs  negative.rs  negative_ba.rs  negative_causative.rs  negative_tara.rs  negative_volitional.rs  passive.rs  passive_negative.rs  past.rs  past_negative.rs  potential.rs  potential_negative.rs  stem.rs  tara.rs  te.rs  te_negative.rs  verb_test.rs  volitional.rs  zu.rs
