[package]
name = "jp_inflections"
version = "0.1.3"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/JojiiOfficial/Japanese_Inflections"
readme = "README.md"
description = "A small crate to conjugate japanese words"
keywords = ["japanese"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
